--- a/index.html
+++ b/index.html
@@ -7,51 +7,51 @@
 </head>
 <body>
     <header>
-        <a href=""></a>
+        <a href="">WEBSTUDIO</a>
         <nav>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Studio</p>
+            <p>Portfolio</p>
+            <p>Contacts</p>
         </nav>
         <address>
-            <p></p>
-            <p></p>
+            <p>info@devstudio.com</p>
+            <p>+11 (000) 111-11-11</p>
         </address>
     </header>
     <main>
         <section>
-            <h1></h1>
-            <button></button>
+            <h1>Effective Solutions for Your Business</h1>
+            <button>Order Service</button>
         </section>
         <section>
-            <h3></h3>
-            <p></p>
-            <h3></h3>
-            <p></p>
-            <h3></h3>
-            <p></p>
-            <h3></h3>
-            <p></p>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </section>
         <section>
-            <h2></h2>
-            <img src="" alt="" width="" heigh="">
-            <h3></h3>
-            <p></p>
-            <img src="" alt="" width="" heigh="">
-            <h3></h3>
-            <p></p>
-            <img src="" alt="" width="" heigh="">
-            <h3></h3>
-            <p></p>
-            <img src="" alt="" width="" heigh="">
-            <h3></h3>
-            <p></p>
+            <h2>Our Team</h2>
+            <img src="/images/img.jpg" alt="Product Designer" width="264" heigh="260">
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+            <img src="/images/img2.jpg" alt="Frontend Developer" width="264" heigh="260">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+            <img src="/images/img3.jpg" alt="Marketing" width="264" heigh="260">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+            <img src="/images/img4.jpg" alt="UI Designer" width="264" heigh="260">
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
         </section>
     </main>
     <footer>
-        <a href=""></a>
-        <p></p>
+        <a href="">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
