deleted:    images/img.jpg 	new file:   images/img1.jpg 	modified:   images/img2.jpg 	modified:   images/img3.jpg 	modified:   images/img4.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <section>
             <h2>Our Team</h2>
-            <img src="/images/img.jpg" alt="Product Designer" width="264" heigh="260">
+            <img src="/images/img1.jpg" alt="Product Designer" width="264" heigh="260">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <img src="/images/img2.jpg" alt="Frontend Developer" width="264" heigh="260">
