--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </section>
         <section>
             <h2>Our Team</h2>
-            <img src="/images/img1.jpg" alt="Product Designer" width="264" heigh="260">
+            <img src="/images/img1.jpg" alt="Product Designer">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-            <img src="/images/img2.jpg" alt="Frontend Developer" width="264" heigh="260">
+            <img src="/images/img2.jpg" alt="Frontend Developer">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
-            <img src="/images/img3.jpg" alt="Marketing" width="264" heigh="260">
+            <img src="/images/img3.jpg" alt="Marketing">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-            <img src="/images/img4.jpg" alt="UI Designer" width="264" heigh="260">
+            <img src="/images/img4.jpg" alt="UI Designer">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </section>
