--- a/index.html
+++ b/index.html
@@ -7,17 +7,30 @@
 </head>
 <body>
     <header>
-        <a href="">WEBSTUDIO</a>
-
         <nav>
-            <p>Studio</p>
-            <p>Portfolio</p>
-            <p>Contacts</p>
+            <a href="./index.html">WEBSTUDIO</a>
+            <ul>
+                <li>
+                    <a href="./index.html">Studio</a>
+                </li>
+                <li>
+                    <a href="./index.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="./index.html">Contacts</a>
+                </li>
+            </ul>
         </nav>
 
         <address>
-            <p>info@devstudio.com</p>
-            <p>+11 (000) 111-11-11</p>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11"</a>
+                </li>
+            </ul>
         </address>
     </header>
     <main>
@@ -27,6 +40,7 @@
         </section>
 
         <section>
+            <h2>Our benefits</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -51,22 +65,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/img1.jpg" width="264" height="260" alt="Product Designer" >
+                    <img src="./images/img1.jpg" width="264" height="260" alt="Product Designer" >
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img2.jpg" width="264" height="260" alt="Frontend Developer" >
+                    <img src="./images/img2.jpg" width="264" height="260" alt="Frontend Developer" >
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img3.jpg" width="264" height="260" alt="Marketing">
+                    <img src="./images/img3.jpg" width="264" height="260" alt="Marketing">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img4.jpg" width="264" height="260" alt="UI Designer">
+                    <img src="./images/img4.jpg" width="264" height="260" alt="UI Designer">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -74,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
